# qontrola

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  mkdocs.yml  prd.md  pyproject.toml  requirements.txt  to-do-list.md
backend/: .env-example  .gitignore  Dockerfile  README.md  database.py  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml  schemas.py  settings.py
backend/docs/: README.md  api_clients.md  api_index.md  api_login.md  api_reference.md  api_superuser.md  api_tenants.md  backend_architecture.md  changelog.md  client_identifier_validation.md  index.md  multi_tenant_architecture.md
backend/docs/changes/: categories_feature.md  task-feature-20250420.md
backend/migrations/: env.py
backend/migrations/versions/: 29b8bb430656_create_department_tables.py  304792a13eeb_add_category_model.py  3804efb00331_create_users_table.py  49d73e4d82a4_create_tables.py  552752e2123f_create_tables.py  8b0af1719ea9_create_tables.py  983af2071536_create_tables.py  a172f21faf93_create_departments_table.py  b52c9b62b79c_add_superuser_column_in_users_table.py  d3fc42c3c767_create_tasks_models.py  d738f13b4cab_create_tables.py  f1594a8c6233_create_tables.py
backend/src/: database.py  initial_data.py  main.py  models.py  schemas.py  security.py  settings.py
backend/src/api/: dependencies.py  main.py
backend/src/api/routes/: __init__.py  categories.py  clients.py  departments.py  login.py  projects.py  superuser.py  tasks.py  tenants.py  users.py
backend/src/core/: database.py  settings.py
backend/src/routes/: departments.py  users.py
backend/src/schemas/: categories.py  clients.py  departments.py  projects.py  tasks.py  tenants.py  token.py  users.py
backend/src/utils/: category_utils.py
backend/tests/: conftest.py  test_app.py  test_database_init.py  test_db.py  test_department.py  test_dependencies.py  test_security.py
backend/tests/routes/: test_clients.py  test_department.py  test_departments.py  test_projects.py  test_superuser.py  test_tasks.py  test_tenants.py  test_token.py  test_users.py
docs/: api_categories.md  api_index.md  api_projects.md  api_tasks.md  api_users.md  authentication_security.md  changelog.md  dev-docs.md  index.md
frontend/: .dockerignore  .gitignore  API_DOCUMENTATION.md  COMPONENTS.md  Dockerfile  FRONTEND_DOCUMENTATION.md  README.md  index.html  package-lock.json  package.json  pyproject.toml  tailwind.config.js  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: FormInput.tsx  QontrollaLogo.tsx
frontend/src/components/clients/: ClientForm.tsx  ClientsHeader.tsx  ClientsTable.tsx
frontend/src/components/clients/form/: ClientAddressFields.tsx  ClientBasicFields.tsx  ClientContactFields.tsx
frontend/src/components/dashboard/: ClientsList.tsx  DashboardHeader.tsx  FinancialOverview.tsx  ProjectsList.tsx  StatsCards.tsx  TasksTable.tsx
frontend/src/components/finances/: FinancesHeader.tsx  FinancesTable.tsx
frontend/src/components/layouts/: DashboardLayout.tsx  SidebarNav.tsx  UserMenu.tsx
frontend/src/components/notifications/: NotificationsPopover.tsx
frontend/src/components/projects/: ProjectForm.tsx  ProjectsHeader.tsx  ProjectsTable.tsx
frontend/src/components/reports/: ReportsHeader.tsx
frontend/src/components/tasks/: TasksHeader.tsx  TasksTable.tsx
frontend/src/components/ui/: sidebar.tsx
frontend/src/contexts/: AuthContext.tsx  TenantContext.tsx
frontend/src/hooks/: useClientForm.ts  useClients.ts  useFinances.ts  useProjects.ts  useTasks.ts
frontend/src/pages/: Clients.tsx  Dashboard.tsx  Finances.tsx  Index.tsx  Login.tsx  Projects.tsx  Reports.tsx  SignUpPage.tsx  Signup.tsx  Tasks.tsx
frontend/src/services/: tenantService.ts
frontend/src/styles/: index.css
src/: security.py
tests/: conftest.py  test_app.py  test_db.py  test_dependencies.py  (+2 more)
(+22 files in other folders)
