[tool.poetry]
name = "studio-caju"
version = "0.1.0"
description = ""
authors = ["Victor Contreras <contreras3991@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.38"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
